tests/typing/fail/tuple_promote_fail.rb

@x = [3]
@x = ['1']

z,* = @x
z + 3
